[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://branches/Battery.tscn" type="PackedScene" id=2]
[ext_resource path="res://AppIcons.gd" type="Script" id=3]
[ext_resource path="res://branches/ThrowableIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://branches/PersistentIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/dock/phone.png" type="Texture" id=6]
[ext_resource path="res://assets/docker-arrow.png" type="Texture" id=7]

[node name="Phone" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Background" type="TextureRect" parent="."]

modulate = Color( 0.523438, 0.523438, 0.523438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0

[node name="Game" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Battery" parent="Game" instance=ExtResource( 2 )]

APP_DRAIN = 1.4

[node name="AppIcons" type="VBoxContainer" parent="Game"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 160.0
margin_right = -40.0
margin_bottom = -300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 180
alignment = 0
script = ExtResource( 3 )
timer_duration = 0.4

[node name="SpawnTimer" type="Timer" parent="Game/AppIcons"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Icons" type="Node" parent="Game/AppIcons"]

[node name="IconRow" type="Control" parent="Game/AppIcons/Icons"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 160.0
margin_right = 1040.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ThrowableIcon" parent="Game/AppIcons/Icons/IconRow" instance=ExtResource( 4 )]

margin_left = 20.0
margin_right = 148.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon2" parent="Game/AppIcons/Icons/IconRow" instance=ExtResource( 4 )]

margin_left = 228.0
margin_right = 356.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon3" parent="Game/AppIcons/Icons/IconRow" instance=ExtResource( 4 )]

margin_left = 436.0
margin_right = 564.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon4" parent="Game/AppIcons/Icons/IconRow" instance=ExtResource( 4 )]

margin_left = 644.0
margin_right = 772.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon5" parent="Game/AppIcons/Icons/IconRow" instance=ExtResource( 4 )]

margin_left = 852.0
margin_right = 980.0
rect_scale = Vector2( 1, 1 )

[node name="IconRow2" type="HBoxContainer" parent="Game/AppIcons/Icons"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 468.0
margin_right = 1040.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1

[node name="ThrowableIcon" parent="Game/AppIcons/Icons/IconRow2" instance=ExtResource( 4 )]

margin_left = 20.0
margin_right = 148.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon2" parent="Game/AppIcons/Icons/IconRow2" instance=ExtResource( 4 )]

margin_left = 228.0
margin_right = 356.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon3" parent="Game/AppIcons/Icons/IconRow2" instance=ExtResource( 4 )]

margin_left = 436.0
margin_right = 564.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon4" parent="Game/AppIcons/Icons/IconRow2" instance=ExtResource( 4 )]

margin_left = 644.0
margin_right = 772.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon5" parent="Game/AppIcons/Icons/IconRow2" instance=ExtResource( 4 )]

margin_left = 852.0
margin_right = 980.0
rect_scale = Vector2( 1, 1 )

[node name="IconRow3" type="HBoxContainer" parent="Game/AppIcons/Icons"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 776.0
margin_right = 1040.0
margin_bottom = 904.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1

[node name="ThrowableIcon" parent="Game/AppIcons/Icons/IconRow3" instance=ExtResource( 4 )]

margin_left = 20.0
margin_right = 148.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon2" parent="Game/AppIcons/Icons/IconRow3" instance=ExtResource( 4 )]

margin_left = 228.0
margin_right = 356.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon3" parent="Game/AppIcons/Icons/IconRow3" instance=ExtResource( 4 )]

margin_left = 436.0
margin_right = 564.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon4" parent="Game/AppIcons/Icons/IconRow3" instance=ExtResource( 4 )]

margin_left = 644.0
margin_right = 772.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon5" parent="Game/AppIcons/Icons/IconRow3" instance=ExtResource( 4 )]

margin_left = 852.0
margin_right = 980.0
rect_scale = Vector2( 1, 1 )

[node name="IconRow4" type="HBoxContainer" parent="Game/AppIcons/Icons"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 1084.0
margin_right = 1040.0
margin_bottom = 1212.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1

[node name="ThrowableIcon" parent="Game/AppIcons/Icons/IconRow4" instance=ExtResource( 4 )]

margin_left = 20.0
margin_right = 148.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon2" parent="Game/AppIcons/Icons/IconRow4" instance=ExtResource( 4 )]

margin_left = 228.0
margin_right = 356.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon3" parent="Game/AppIcons/Icons/IconRow4" instance=ExtResource( 4 )]

margin_left = 436.0
margin_right = 564.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon4" parent="Game/AppIcons/Icons/IconRow4" instance=ExtResource( 4 )]

margin_left = 644.0
margin_right = 772.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon5" parent="Game/AppIcons/Icons/IconRow4" instance=ExtResource( 4 )]

margin_left = 852.0
margin_right = 980.0
rect_scale = Vector2( 1, 1 )

[node name="IconRow5" type="HBoxContainer" parent="Game/AppIcons/Icons"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 1392.0
margin_right = 1040.0
margin_bottom = 1520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1

[node name="ThrowableIcon" parent="Game/AppIcons/Icons/IconRow5" instance=ExtResource( 4 )]

margin_left = 20.0
margin_right = 148.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon2" parent="Game/AppIcons/Icons/IconRow5" instance=ExtResource( 4 )]

margin_left = 228.0
margin_right = 356.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon3" parent="Game/AppIcons/Icons/IconRow5" instance=ExtResource( 4 )]

margin_left = 436.0
margin_right = 564.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon4" parent="Game/AppIcons/Icons/IconRow5" instance=ExtResource( 4 )]

margin_left = 644.0
margin_right = 772.0
rect_scale = Vector2( 1, 1 )

[node name="ThrowableIcon5" parent="Game/AppIcons/Icons/IconRow5" instance=ExtResource( 4 )]

margin_left = 852.0
margin_right = 980.0
rect_scale = Vector2( 1, 1 )

[node name="Dock" type="Container" parent="Game"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="IconRow" type="HBoxContainer" parent="Game/Dock"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1

[node name="PersistentIcon" parent="Game/Dock/IconRow" instance=ExtResource( 5 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_top = 0.0
margin_right = 188.0
margin_bottom = 160.0
spawn_rate = 5.0

[node name="PersistentIcon2" parent="Game/Dock/IconRow" instance=ExtResource( 5 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_top = 0.0
margin_right = 396.0
margin_bottom = 160.0
spawn_rate = 3.0

[node name="PersistentIcon3" parent="Game/Dock/IconRow" instance=ExtResource( 5 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 476.0
margin_top = 0.0
margin_right = 604.0
margin_bottom = 160.0
spawn_rate = 1.4

[node name="PersistentIcon4" parent="Game/Dock/IconRow" instance=ExtResource( 5 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 0.0
margin_right = 812.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
spawn_rate = 2.0

[node name="PersistentIcon5" parent="Game/Dock/IconRow" instance=ExtResource( 5 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 892.0
margin_top = 0.0
margin_right = 1020.0
margin_bottom = 160.0
spawn_rate = 4.0

[node name="docker-arrow" type="TextureRect" parent="Game/Dock"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -37.0
margin_right = 36.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0


